# xgen-sandbox

./: .air.toml  .env.example  .gitattributes  .gitignore  Makefile  README.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
agent/: Dockerfile  go.mod  go.sum
browser/: package-lock.json  package.json  tsup.config.ts
browser/src/: index.ts  novnc.d.ts  types.ts
cli/: go.mod
dashboard/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
deploy/dev/: kind-config.yaml
docs/: api-reference.md  architecture.md  deployment.md  error-codes.md  examples.md  local-testing.md  performance.md  sdk-feature-matrix.md  sdk-guide.md  security.md  session-registry.md  troubleshooting.md
examples/basic-exec/: main.ts  package-lock.json
examples/basic-exec-go/: go.mod  go.sum  main.go
examples/basic-exec-python/: main.py
examples/basic-exec-rust/: Cargo.toml
examples/browser-components/: index.html  package-lock.json  package.json
examples/capabilities/: main.ts  package-lock.json  package.json  tsconfig.json
runtime/base/: Dockerfile
scripts/: debug-sandbox.sh
sdks/python/: pyproject.toml
sdks/python/src/xgen_sandbox/: __init__.py  client.py  sandbox.py  types.py
sdks/python/src/xgen_sandbox/protocol/: __init__.py  codec.py
sdks/python/src/xgen_sandbox/transport/: __init__.py  http.py  ws.py
sdks/rust/: Cargo.toml
sdks/rust/src/: client.rs  error.rs  lib.rs  protocol.rs  sandbox.rs  types.rs
sdks/rust/src/transport/: http.rs  ws.rs
sidecar/: Dockerfile  go.mod  go.sum
(+133 files in other folders)
