[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xgen-sandbox"
version = "0.1.0"
description = "Python SDK for xgen-sandbox"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "websockets>=12.0",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
